# its

./: .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  README.md  app.py  db_utils.py  docker-compose-deploy.yaml  docker-compose.yaml  dspy_create.py  dspy_pipeline.py  kg_gen_create.py  lang_main.py  lc_tutorial_query.py  main.py  models.py  pipeline.py  pyproject.toml  question_generator.py  schema.sql  summariser.py  teacher.py  test_sqlmodel.py  text_processing.py  to_text.py  todo.md
.github/workflows/: docker-deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  config.py  constants.py  database.py  dependencies.py  development.py  exceptions.py  main.py  models.py  pyproject.toml  relation_creation.py  router.py  schemas.py  service.py  test.db  test.py  text_processing.py  utils.py
backend/analytics/: models.py  queries.py  routes.py
backend/auth/: constants.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/courses/: __init__.py  models.py  router.py  schemas.py  service.py
backend/development/: carousel-data.py  document-summary.py  dpsy_assign_lm.py  power-analysis.py  scientsbank-auto.py  scientsbank-eval.py  test.py
backend/documents/: events.py  models.py  router.py  schemas.py  service.py
backend/graph_db/: kg_gen_create.py  lc_create.py  lc_query.py
backend/migrations/: env.py
backend/migrations/versions/: 0b8708325048_add_indexes_to_chunk_table.py  132ce5366007_.py  22e567a189b4_adding_mising_model.py  2b6e777eb319_init.py  2eb28c906267_fix_task_foreign_keys.py  30fd8af28944_add_is_accepted_and_num_acceptances_to_.py  495911a8135a_add_cascade_delete_for_repository_units.py  576e48cf7797_add_mising_taskmetrics.py  6c7ebb16cf35_convert_repo_unit_from_m_to_n_to_m_to_1.py  70c05af27d10_convert_repo_unit_from_m_to_n_to_m_to_1.py  755bb2eadb1f_adding_logging_models.py  7dc6becbefd6_add_taskmetrics_and_useractivity_tables.py  7ea0b31d4194_initial_migration.py  831121704286_adding_mising_relationship.py  92edd72fe1ad_adding_logging.py  95f4da89fc59_add_skills_module.py  a65f15891825_adding_fields_to_tasks_changetype.py  a84a79600dc6_add_task_versioning_and_answer_logging.py  a91fc9920886_add_mising_models_to_migrations_env_file.py  b10f3e70a1a2_initial_database_schema.py  b15add050986_.py  b49dba212232_add_unit_as_extra_layer_between_repo_.py  b6aed319328a_add_repository_based_access.py  bf382034a04d_add_is_accepted_to_taskmetrics.py  c0f8b3928619_adding_relationship.py  c63817311ded_final_tasks_changetype.py  c9a1f0add001_add_reports_table.py  cdcff104e1d3_add_event_logging_and_analytics_tables.py  cdfe29122ff7_.py  eb423731a6a4_adding_relationship.py  ed2389718897_replace_chunk_metadata_with_chunk_length.py
backend/reports/: models.py  router.py
backend/repositories/: access_control.py  models.py  router.py
backend/skills/: models.py  router.py
backend/tasks/: __init__.py  events.py  events_service.py  models.py  router.py  schemas.py  service.py  stats.py  stats_service.py  versions.py  versions_service.py
backend/tests/: README.md  conftest.py  run_tests.py  test_auth.py  test_basic.py  test_documents_crud.py  test_repositories_crud.py  test_tasks_crud.py  test_tasks_llm.py
backend/units/: models.py  router.py
development/: experiments_on_scientsbank.ipynb  test_db.py
docling-serve/: Dockerfile  README.md  main.py  pyproject.toml
frontend/: .dockerignore  .env.example  .simple-git-hooks.json  Caddyfile  Dockerfile  Dockerfile copy  README.md  auth.d.ts  eslint.config.mjs  nginx.conf  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/components/: consent-modal.vue  d-document-upload-modal.vue  d-dropdown.vue  d-generate-tasks-modal.vue  d-hamburger-menu.vue  d-html-viewer.vue  d-item-card.vue  d-item-form.vue  d-label.vue  d-modal.vue  d-progress-bar.vue  d-repository-documents.vue  d-searchable-dropdown.vue  d-select.vue  d-snackbar.vue  d-spinner.vue  d-tag.vue  d-text-viewer.vue  d-view-toggle.vue
frontend/app/components/d-button/: close.vue  group.vue  index.vue  labelled.vue  radio.vue
frontend/app/components/d-input/: area.vue  index.vue  search.vue
frontend/app/components/d-modal/: members.vue
frontend/app/components/d-page/: Maintenance.vue  NotImplemented.vue  empty.vue  header.vue
frontend/app/components/d-page/sidebar/: content.vue  index.vue
frontend/app/components/d-task/: answer.vue  card.vue  form.vue  result.vue
frontend/app/composables/: useAuth.ts
frontend/app/constans/: constants.js
frontend/app/layouts/: default.vue  minimal.vue
frontend/app/middleware/: analytics-auth.ts  auth.global.ts
frontend/app/pages/: analytics.vue  courses.vue  custom-html.vue  documents.vue  forgot-password.vue  index.vue  login.vue  logout.vue  management.vue  register.vue  repositories.vue  repository.vue  reset-password.vue  skills.vue  study.vue  tasks.vue  tutor.vue  user.vue
frontend/app/plugins/: auth.client.ts
frontend/app/stores/: auth.ts  notifications.ts
frontend/app/types/: models.ts
frontend/config/: deploy.yml
frontend/old/: drizzle.config.ts
frontend/old/server/api/: forgot-password.post.ts  login.post.ts  logout.post.ts  register.post.ts  reset-password.post.ts
frontend/old/server/api/courses/: index.get.ts  index.post.ts
frontend/old/server/api/courses/[id]/: index.delete.ts  index.get.ts
frontend/old/server/database/: schema.ts
frontend/old/server/plugins/: session.ts
frontend/old/server/utils/: drizzle.ts  ratelimiter.ts
frontend/server/api/: forgot-password.post.ts
frontend/server/api/courses/[id]/: index.put.ts
frontend/server/api/skills/: index.get.ts  index.post.ts
frontend/server/api/skills/[id]/: index.delete.ts  index.get.ts  index.put.ts
frontend/server/api/tasks/: index.get.ts  index.post.ts
frontend/server/api/tasks/[id]/: index.get.ts  index.put.ts
frontend/server/database/: schema.ts
frontend/server/plugins/: session.ts
graph_db/: kg_gen_create.py  lc_tutorial_query.py
scripts/: README.md  docker-health-check.sh  health-check.sh
(+1 files in other folders)
