[project]
name = "its-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.0",
    "kg-gen>=0.2.0",
    "langchain>=0.3.26",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.8",
    "langchain-neo4j>=0.4.0",
    "langchain-openai>=0.3.8",
    "langgraph>=0.5.4",
    "neo4j>=5.28.1",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
]
