[project]
name = "its-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.42.1",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.0",
    "kg-gen>=0.2.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.8",
    "langchain-neo4j>=0.4.0",
    "langchain-openai>=0.3.8",
    "langgraph>=0.5.4",
    "neo4j>=5.28.1",
    "pre-commit>=4.2.0",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
