[project]
name = "its-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.42.1",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.0",
    "pre-commit>=4.2.0",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
